# rust-dinf

./: .gitignore  Cargo.toml  README.md
src/: argc.rs  dir_info.rs  error.rs  exec.rs  main.rs  support.rs
