[package]
name = "dinf"
version = "0.1.3-WIP"
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/jeremychone/rust-dinf"
description = "Simple command line to get directory information"
repository = "https://github.com/jeremychone/rust-dinf"
keywords = [
	"cli",
	"directory"
]
categories = ["command-line-interface"]
license = "MIT"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Cli
clap =  {version = "4", features = ["cargo"]}
# -- File
walkdir = "2"
file-size = "1"
globset = "0.4"
# -- Others
derive_more = {version = "2", features = ["from", "display"]}
