[package]
name = "dinf"
version = "0.1.4-WIP"
edition = "2024"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/jeremychone/rust-dinf"
description = "Simple command line to get directory information"
repository = "https://github.com/jeremychone/rust-dinf"
keywords = [
	"cli",
	"directory"
]
categories = ["command-line-interface"]
license = "MIT"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Cli
clap =  {version = "4", features = ["cargo", "derive"]}
# -- File
simple-fs = "0.6"
walkdir = "2"
globset = "0.4"
# -- Formatters
size = "0.5.0"
num-format = "0.4.4"
# -- Others
derive_more = {version = "2", features = ["from", "display"]}
